MyGameAlgo V4 Bugs Fixed!!